# MinicursoCUDA2

1/: CMakeLists.txt  Makefile  vectoradd.cu
2/: CMakeLists.txt  Makefile  boxfilter.cu  lena.pgm  out.pgm
3/: CMakeLists.txt  Makefile  simulacao.cu
includes/: helper_math.h  tiny_helper_image.h
